k8s-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress2
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: frontend-service
            port:
              number: 80
      - pathType: Prefix
        path: /api
        backend:
          service:
            name: backend-svc
            port:
              number: 3500
      - pathType: Prefix
        path: /database
        backend:
          service:
            name: mongodb-svc
            port:
              number: 27017
